--- a/styles/applecrispstyles.css
+++ b/styles/applecrispstyles.css
@@ -1,19 +1,8 @@
-html {
+html, body{
     margin: 0;
     padding: 0;
     border: 0;
     overflow-x: hidden;
-    overflow-y: hidden;
-    width: 100%;
-    max-width: 100%;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
     width: 100%;
     max-width: 100%;
 }
@@ -94,7 +83,7 @@ li{
         padding: 25px;
         box-sizing: border-box;
         overflow: hidden;
-    }
+}
 
     .recipe-text {
         grid-column: 2;
