--- a/styles/header.css
+++ b/styles/header.css
@@ -74,27 +74,13 @@
     display: block;
 }
 
-html {
+html,body {
     margin: 0;
     padding: 0;
     border: 0;
     overflow-x: hidden;
-    overflow-y: hidden;
     width: 100%;
     max-width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    width: 100%;
-    max-width: 100%;
-    min-height: 100%;
     box-sizing: border-box;
 }
 
