--- a/styles/indexstyles.css
+++ b/styles/indexstyles.css
@@ -1,22 +1,10 @@
-html { 
+html,body { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     overflow-x: hidden;
     width: 100%;
     max-width: 100%;
-    height: 100%;
-}
-
-body { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: auto;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
 }
 
 * {
@@ -312,5 +300,6 @@ h2{
     #email{
         margin-bottom: 20px;
     }
+}
 }
 }
